<?xml version="1.0"?>
<package format="2">
    <name>uwrt_mars_rover_msgs</name>
    <version>0.0.0</version>
    <description>Package containing all custom msgs used within the uwrt_mars_rover metapackage</description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

</package>
