<?xml version="1.0"?>
<package format="2">
    <name>uwrt_mars_rover_msgs</name>
    <version>0.0.0</version>

    <description>Package containing all generic custom msgs that are designed to be used in more than one subsystem
    </description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>

    <depend>message_generation</depend>
    <depend>actionlib_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_runtime</depend>

</package>
